@@ -3,6 +3,7 @@ Codebase in sync with the KDE3 2.00.0-beta1 release
 
     PORTED: Krusader to KDE4
 
+    ADDED: select remote encoding for krarc
     ADDED: new synchronizer shortcuts for modifying the synchronizer tasks
     ADDED: credit for Václav in the about box
 
